--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@ body {
 }
 
 .App {
-  width: 30%;
-  padding: 20px;
-  background-color: #d9981e ;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
